# traffic-data

./: .env.sample  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  bumpversion.toml  compose.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.claude/: ignore  settings.json  todo.md  versioning-implementation-plan.md
app/: api_to_bucket.py  cloud.py  consumer.py  main.py  producer.py  to_bq.py
app/utils/: create_dataset.py
core/: __init__.py  config.py  directory.py  log_config.py  utils.py
spikes/: create_dataset.py
tests/: conftest.py  test_versioning.py  utils.py
tests/app/: test_api_to_bucket.py  test_cloud.py  test_main.py  test_to_bq.py
tests/core/: test_utils.py
tests/data_files/: bucket_raw.txt  vicroads_api_sample.json
