

[project]
name = "traffic-api-data"
version = "0.0.2.dev0"
requires-python = "== 3.13.7"
dependencies = [
    "fastapi",
    "gcsfs",
    "google-cloud-storage",
    "google-cloud-bigquery",
    "polars",
    "pyarrow",
    "python-decouple",
    "pytz",
    "requests",
    "uvicorn"
]


[project.optional-dependencies]
dev = [
    "marimo"
]
ci = [
    "bump-my-version",
    "pre-commit",
    "pandas",  # only used by testing utils for fixed width txt file i/o
    "pytest",
    "ruff"
]
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.uv]
exclude-newer = "2 weeks"

[tool.ruff]
# Set the maximum line length to 99.
line-length = 99
# useful for pre-commit
force-exclude = true

[tool.ruff.format]
skip-magic-trailing-comma = true
exclude = ["*.ipynb"]


